--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,135 @@
-    body {
+    .body {
         margin: 0;
         padding: 0;
     }
 
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 2.5rem auto auto;
-        grid-template-areas:
-            "header header"
-            "item1 item2"
-            "item3 item4";
-        gap: 10px; /* Optional: Adds space between grid items */
-        border: 1px solid #ccc; /* Optional: For visualization */
-        padding: 10px; /* Optional: For visualization */
+    .dropdown {
+        position: relative;
+        width: 80%;
+        z-index: 1;
     }
 
-    .header{
-        grid-area: header;
+    /* Style the dropdown button */
+    .dropbtn {
+        background-color: white;
+        color: black;
+        border: 1px;
+        border-color: #333;
+        border-style: solid;
+        cursor: pointer;
+        padding: 0.5rem;
+        margin-left: 0.5rem;
+        width: 100%;
+        box-sizing: border-box; 
+        align-items: left;
+    }
+
+    /* Dropdown content */
+    .dropdown-content {
+        display: none;
+        background-color: #f9f9f9;
+        min-width: 200px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    }
+
+    /* Links inside dropdown content */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
+
+    /* Show the dropdown content on hover */
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    /* Change background color of dropdown button on hover */
+    .dropdown:hover .dropbtn {
+        background-color: #f1f1f1;
+    }
+
+    .titlebar {
+        display: flex;
+        align-items: center;
+    }
+
+    .sidebarButton {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-height: 1.5rem;
+    }
+
+    .title {
+        padding-left: 2rem;
+    }
+
+    .dashboard {
+        display: grid;
+        grid-template-columns: 30% 70%;
+        transition: grid-template-columns 0.3s;
+        width: 100%;
+        z-index: 1;
+    }
+
+    .sidebar {
+        background-color: #333;
+        color: white;
+        margin-right: 0.5rem;
+        padding: 1rem;
+    }
+
+    .main-content {
+        background-color: white;
+        z-index: 1;
+    }
+
+    .closed .dashboard {
+        grid-template-columns: 0 1fr;
+    }
+
+    .closed .sidebar {
+        display: none;
+    }
+
+    .closed .main-content {
+        grid-column: span 2;
+    }
+
+    .subdash {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 2rem 1fr 1fr;
+        grid-template-areas: 
+            "subheader1 subheader2"
+            "item1 item2"
+            "item3 item4";
+        gap: 0.5rem;
+    }
+
+    .subheader1 {
+        grid-area: subheader1;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        max-height: 1.5rem;
+        padding-left: 1.5rem;
+    }
+
+    .subheader2 {
+        grid-area: subheader2;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        max-height: 1.5rem;
+        padding-left: 1.5rem;
     }
 
     .item1 {
@@ -25,7 +137,7 @@
     }
 
     .item2 {
-        grid-area: item2;
+       grid-area: item2; 
     }
 
     .item3 {
@@ -61,15 +173,3 @@
     }
 
 
-    @media (max-width: 600px) {
-    .container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 2.5rem auto auto auto auto;
-    grid-template-areas:
-        "header"
-      "item1"
-      "item2"
-      "item3"
-      "item4";
-  }
-}
