--- a/css/style.css
+++ b/css/style.css
@@ -136,30 +136,36 @@
 
     .item1 {
         grid-area: item1;
+        height: 25rem;
+        max-height:45vh;
     }
 
     .item2 {
        grid-area: item2; 
+       height: 25rem;
+        max-height:45vh;
     }
 
     .item3 {
         grid-area: item3;
+        height: 25rem;
+        max-height:40vh;        
     }
 
     .item4 {  
         grid-area: item4;
+        height: 25rem;
+        max-height:40vh;        
     }
 
     #map1 {
-        height: 20rem;  
-        max-height: 100%;  
+        height: 100%;  
         max-width: 100%;
         border: 1px solid darkgray;
     }
 
     #map2 {
-        height: 20rem;  
-        max-height: 100%;  
+        height: 100%;  
         max-width: 100%;
         border: 1px solid darkgray;
     }
